--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section class="home" id="home">
         <div class="home-img">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\my photo.jpg" alt="Hero">
+            <img src="my photo.jpg" alt="Hero">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Dhivakar!</span></h1>
