--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="experience">
         <h2>Experience :</h2>
         <div class="experience-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\suven.png" alt="Job 2" class="experience-image">
+            <img src= "suven.png" alt="Job 2" class="experience-image">
             <div class="experience-content">
                 <h2>Frontend Developer Intern, Suvan Consultant & Technology Pvt. Ltd</h2>
                 <p>June 2023 - July 2023</p>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="experience-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\ps sol.jpeg" alt="Job 1" class="experience-image">
+            <img src="ps sol.jpeg" alt="Job 1" class="experience-image">
             <div class="experience-content">
                 <h2>AI & ML Intern, Pantech Prolabs India Pvt. Ltd, Chennai</h2>
                 <p>May 2024 - Aug 2024</p>
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="experience-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\codeclause_logo.jpeg" alt="Job 2" class="experience-image">
+            <img src="codeclause_logo.jpeg" alt="Job 2" class="experience-image">
             <div class="experience-content">
                 <h2>Graphic Design Intern, CodeClause</h2>
                 <p>Aug 2024 - Sep 2024</p>
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="experience-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\progitech.jpeg" alt="Job 2" class="experience-image">
+            <img src="progitech.jpeg" alt="Job 2" class="experience-image">
             <div class="experience-content">
                 <h2>Android Development Intern, Prodigy Infotech</h2>
                 <p>July 2024 - Aug 2024</p>
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="experience-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\codealpha.jpeg" alt="Job 2" class="experience-image">
+            <img src="codealpha.jpeg" alt="Job 2" class="experience-image">
             <div class="experience-content">
                 <h2>Data Science Intern, CodeAlpha</h2>
                 <p> July 2024 - Aug 2024</p>
@@ -108,7 +108,7 @@
     <section id="education">
         <h2>Education :</h2>
         <div class="education-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\nptc.jpeg" alt="School 1" class="education-image">
+            <img src="nptc.jpeg" alt="School 1" class="education-image">
             <div class="education-content">
                 <h2>Diploma in Electronics and Communication Engineering</h2>
                 <p>Nachimuthu polytechnic College, pollachi</p>
@@ -119,7 +119,7 @@
             </div>
         </div>
         <div class="education-item">
-            <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\kite.jpeg" alt="School 2" class="education-image">
+            <img src="kite.jpeg" alt="School 2" class="education-image">
             <div class="education-content">
                 <h2>B.tech Artificial Intelligence and Data Science</h2>
                 <p>Kgisl Institute of Technology, saravanampatti, Coimbatore</p>
@@ -137,73 +137,73 @@
         <h2>Projects</h2>
         <div class="project-all">
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\jrv.jpeg" alt="Jarvis 2.0" />
+                <img src="jrv.jpeg" alt="Jarvis 2.0" />
                 <h3>Jarvis 2.0</h3>
                 <p>Python based Voice assistant model</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\agri.jpeg" alt="agri" />
+                <img src="agri.jpeg" alt="agri" />
                 <h3>Vivasayi APP</h3>
                 <p>Monitor and track the Agricultural land in daily</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\sih.jpg" alt="sih" />
+                <img src="sih.jpg" alt="sih" />
                 <h3>SIH Winning project</h3>
                 <p>Mines operations through the based on autonomous dhumper truck using ROS</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\av car.jpg" alt="hacktrix" />
+                <img src="av car.jpg" alt="hacktrix" />
                 <h3>Automatic car</h3>
                 <p>IOT based wifi control vehicle</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\ayur.jpg" alt="ayurbot" />
+                <img src="ayur.jpg" alt="ayurbot" />
                 <h3>Ayur-Gpt</h3>
                 <p>Ayurveda based to create LLM model</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\poster.png" alt="poster" />
+                <img src="poster.png" alt="poster" />
                 <h3>Poster Design</h3>
                 <p>using figma</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\card.png" alt="card" />
+                <img src="card.png" alt="card" />
                 <h3>Intro Card Desgin</h3>
                 <p>graphic design project</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\video.png" alt="video" />
+                <img src="video.png" alt="video" />
                 <h3>Video project</h3>
                 <p>Using capcut and alightmotion</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\logo.jpg" alt="logo" />
+                <img src="logo.jpg" alt="logo" />
                 <h3>Logo Design</h3>
                 <p> To making a unique style Logo for company</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\dashboard.png" alt="dashboard" />
+                <img src="dashboard.png" alt="dashboard" />
                 <h3> Sales prediction dashboard</h3>
                 <p>Using power BI tool</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\food.png" alt="food" />
+                <img src="food.png" alt="food" />
                 <h3>Food website</h3>
                 <p>Food Recommendation Web App using HTML,CSS & JS</p>
                 <a href="https://github.com/dhivakar-70"><i class="fa-brands fa-github"></i>View</a>
             </div>
             <div class="project">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\Moreonly-logos.jpg" alt="more" />
+                <img src="Moreonly-logos.jpg" alt="more" />
                 <h3>Future project</h3>
                 <p>Working</p>
             </div>
@@ -214,107 +214,107 @@
         <h2>Skills</h2>
         <div class="skills-container">
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\html.png" alt="HTML">
+                <img src="html.png" alt="HTML">
                 <h3>HTML</h3>
                 <p>Markup language for creating web pages.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\css.png" alt="CSS">
+                <img src="css.png" alt="CSS">
                 <h3>CSS</h3>
                 <p>Styling language for designing web pages.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\JavaScript-logo.png" alt="JavaScript">
+                <img src="JavaScript-logo.png" alt="JavaScript">
                 <h3>JavaScript</h3>
                 <p>Scripting language for dynamic web content.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\py.png" alt="Python">
+                <img src="py.png" alt="Python">
                 <h3>Python</h3>
                 <p>High-level programming language.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\dj.png" alt="Django">
+                <img src="dj.png" alt="Django">
                 <h3>Django</h3>
                 <p>Python web framework for rapid development.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\c.png" alt="C">
+                <img src="c.png" alt="C">
                 <h3>C</h3>
                 <p>General-purpose programming language.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\c++.png" alt="C++">
+                <img src="c++.png" alt="C++">
                 <h3>C++</h3>
                 <p>Object-oriented programming language.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\ps.png" alt="Adobe Photoshop">
+                <img src="ps.png" alt="Adobe Photoshop">
                 <h3>Adobe Photoshop</h3>
                 <p>Image editing and graphic design software.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\illustator.png" alt="Illustrator">
+                <img src="illustator.png" alt="Illustrator">
                 <h3>Illustrator</h3>
                 <p>Vector graphics editor for designing logos.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\adobe-premiere-pro.png" alt="Premiere Pro">
+                <img src="adobe-premiere-pro.png" alt="Premiere Pro">
                 <h3>Premiere Pro</h3>
                 <p>Video editing software.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\capcut.png" alt="capcut pro">
+                <img src="capcut.png" alt="capcut pro">
                 <h3>Capcut pro</h3>
                 <p>Creating and editing video content.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\DaVinci_Resolve_Studio.png" alt="DaVinci Resolve">
+                <img src="DaVinci_Resolve_Studio.png" alt="DaVinci Resolve">
                 <h3>DaVinci Resolve</h3>
                 <p>Video editing tool.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\Figma.png" alt="Figma">
+                <img src="Figma.png" alt="Figma">
                 <h3>Figma</h3>
                 <p>UI/UX design tool for collaborative work.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\canva.jpg" alt="Canva">
+                <img src="canva.jpg" alt="Canva">
                 <h3>Canva</h3>
                 <p>Online graphic design platform.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\excel.png" alt="Excel">
+                <img src="excel.png" alt="Excel">
                 <h3>Excel</h3>
                 <p>Spreadsheet software for data analysis.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\power bi.jpeg" alt="Power BI">
+                <img src="power bi.jpeg" alt="Power BI">
                 <h3>Power BI</h3>
                 <p>Business analytics tool by Microsoft.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\tableau-software.jpg" alt="Tableau">
+                <img src="tableau-software.jpg" alt="Tableau">
                 <h3>Tableau</h3>
                 <p>Data visualization software.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\mongo db.png" alt="mongoDB">
+                <img src="mongo db.png" alt="mongoDB">
                 <h3>MongoDB</h3>
                 <p>Data storage tool.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\github.png" alt="github">
+                <img src="github.png" alt="github">
                 <h3>github</h3>
                 <p>Version control system.</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\iot.jpg" alt="IOT">
+                <img src="iot.jpg" alt="IOT">
                 <h3>IOT</h3>
                 <p>Internet of Things</p>
             </div>
             <div class="skill">
-                <img src="C:\Users\dhivakar.m\Downloads\3d-portfolio-website-master\my_portfolio\photos\sql.png" alt="IOT">
+                <img src="sql.png" alt="IOT">
                 <h3>SQL</h3>
                 <p>Structured Query Language</p>
             </div>
